Fixed overflowing images

--- a/styles.css
+++ b/styles.css
@@ -99,6 +99,7 @@ nav > ul {
     border: 4px solid #3882F6;
     border-radius: 15px;
     margin: 0 35px;
+    overflow: hidden;
 }
 .img-description {
     display: flex;
@@ -111,19 +112,19 @@ nav > ul {
 }
 .html-img {
     width: 142px;
-    height: 142px;
+    height: 145px;
 }
 .java-img {
     width: 175px;
-    height: 142px;
+    height: 145px;
 }
 .python-img {
     width: 184px;
-    height: 143px;
+    height: 145px;
 }
 .mysql-img {
-    width: 142px;
-    height: 142px;
+    width: 145px;
+    height: 145px;
 }
 
 h2 {
